Stop lines from being cut off at bottom of content

--- a/assets/www/app.css
+++ b/assets/www/app.css
@@ -97,6 +97,10 @@ header {
 	position:relative;
 }
 
+#content.scroller {
+	bottom: 52px;
+}
+
 #main {
 	padding: 8px;
 	margin-bottom: 52px;
